<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:layout_marginBottom="20dp"
        android:text="TIPO DE TRIANGULO"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/IngreLa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IngreLa"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="Ingrese Lado A"
        app:layout_constraintBottom_toTopOf="@+id/IngreLb"
        app:layout_constraintEnd_toStartOf="@+id/Id_ladoA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Id_ladoA"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Id_LadoC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IngreLa"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IngreLb"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="Ingrese Lado B"
        app:layout_constraintBottom_toTopOf="@+id/IngreLc"
        app:layout_constraintEnd_toStartOf="@+id/Id_LadoC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngreLa" />

    <EditText
        android:id="@+id/Id_LadoB"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/IdTriangulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IngreLc"
        app:layout_constraintTop_toBottomOf="@+id/Id_LadoC" />

    <TextView
        android:id="@+id/IngreLc"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="Ingrese Lado C"
        app:layout_constraintBottom_toTopOf="@+id/bt_consultar"
        app:layout_constraintEnd_toStartOf="@+id/Id_LadoB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngreLb" />

    <EditText
        android:id="@+id/Id_LadoC"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/Id_LadoB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/IngreLb"
        app:layout_constraintTop_toBottomOf="@+id/Id_ladoA" />

    <Button
        android:id="@+id/bt_consultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="437dp"
        android:text="Consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/IdTriangulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngreLc" />

    <TextView
        android:id="@+id/IdTriangulo"
        android:layout_width="199dp"
        android:layout_height="31dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="445dp"
        android:text="TipoTriangulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_consultar"
        app:layout_constraintTop_toBottomOf="@+id/Id_LadoB" />


</android.support.constraint.ConstraintLayout>